# GameOfLifeAction

./: README.md  action.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: GameOfLife.yml  GameOfLifeGif.yml
GameOfLife/: ArgParser.py  GameOfLife.py  IterationUpdater.py  requirements.txt  test.txt
src/game_of_life_action/: __init__.py  cli.py  config.py  engine.py  iteration.py  svg.py
